# stratis-cli

./: .gitignore  .isort.cfg  .mergify.yml  .packit.yaml  .pyup.yml  .travis.yml  CHANGES.txt  Makefile  README.rst  _typos.toml  check.py  monkeytype_config.py  pyproject.toml  report.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dummy.yml  main.yml  nightly.yml  push.yml  support.yml  weekly.yml
developer_tools/: get_managed_objects  get_pool_uuid_1  get_pool_uuid_2  update_introspection_data
docs/: Makefile  stratis.txt
etc/bash_completion.d/: stratis
shell-completion/bash/: stratis
shell-completion/fish/: stratis.fish
shell-completion/zsh/: _stratis
src/: main.py
src/cli/: __init__.py  _cache.py  _connection.py  _constants.py  _errors.py  _lib.py  _logical.py  _main.py  _misc.py  _parser.py  _physical.py  _stratisd_constants.py  _stratisd_errors.py
src/cli/_actions/: __init__.py  _cache.py  _lib.py  _logical.py  _meta.py  _misc.py  _physical.py  _pool.py  _stratis.py  _top.py
src/cli/_dbus/: __init__.py  _manager.py  (+2 more)
src/stratis_cli/: __init__.py  _alerts.py  _constants.py  _error_codes.py  _error_reporting.py  _errors.py  _exit.py  _main.py  _stratisd_constants.py  _version.py
tests/: README.txt  _misc.py
tests/blackbox/: README.md  stratis_cert.py  stratis_cli_cert.py  stratisd_cert.py
tests/ci/: cli.sh
tests/dbus/: _constants.py  test_object_path.py  test_signature_parser.py  test_stratis.py
tests/integration/: _constants.py  _keyutils.py  _misc.py  test_create.py  test_debug.py  test_destroy.py  test_list.py  test_misc.py  test_parser.py  test_rename.py  test_stratis.py
tests/unit/: test_constants.py  test_error_fmt.py  test_errors.py  test_formatting.py  test_range_parsing.py  test_running.py  test_signature_parser.py  test_stratisd_constants.py  test_stratisd_errors.py  test_timeout.py
tests/whitebox/: README.txt  _misc.py
(+180 files in other folders)
