[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src", "tests", "bin"]
pythonVersion = "3.12"

[tool.pylint]
good-names = [
  "Filesystem",
  "Manager",
  "Manager0",
  "MODev",
  "MOFilesystem",
  "MOPool",
  "ObjectManager",
  "Pool",
  "Report",
]
