[metadata]
name = stratis-cli
author = Anne Mulhern
author_email = amulhern@redhat.com
url = https://github.com/stratis-storage/stratis-cli
description = Stratis CLI
license = Apache-2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: stratis_cli._version.__version__
platforms =
    Linux
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Filesystems
    Topic :: System :: Systems Administration

[options]
python_requires = >=3.12
install_requires =
    dbus-client-gen>=0.4
    dbus-python-client-gen>=0.8.4
    justbytes>=0.14
    packaging
    psutil
    python-dateutil
    wcwidth

package_dir =
    =src

packages =
    stratis_cli
    stratis_cli._parser
    stratis_cli._actions

scripts =
    bin/stratis
